Vista de login completada

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -26,7 +26,7 @@
     color: $colorTexto;
     font-size: 1.6rem;
     display: inline-block;
-    font-weight: 700;
+    //font-weight: 700;
     border: none;
     transition-property: background-color;
     transition-duration: .3s;
